# Health4Earth

./: .gitignore  Makefile  README.md  analysis.html  capitales.html  code.html  dashboard.html  documentation.html  index.html  map.html  methods.html  performance_report.txt  predictions_france.html  pyproject.toml  search.json  test.py
.github/workflows/: ci.yml  main_ci.yml  publish.yml
api/: genindex.html  health4earth.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
api/_modules/: index.html
api/_sources/: index.rst.txt  installation.rst.txt  modules.rst.txt  usage.rst.txt
api/_static/: custom.css
api/gallery/: examples.html
api/install/: contacts.html  installation.html
api/modules/: analytics.html  data_ingest.html
data/: cities.csv
data/clean/: health4earth_cities.csv  health4earth_dataset.csv
data/raw/: GBD_respiratory_deseases.csv  cities.csv
docs/notes/: README.html  gantt.md  roadmap.qmd
docs/source/: conf.py  health4earth.rst  index.rst  installation.rst  introduction.rst  traitement_donnees.rst
health4earth/: __init__.py  analytics.py  data_capitales.py  data_clean.py  data_co2.py  data_ingest.py  data_life.py  data_pollution.py  data_transform.py  explorer.py  geo.py  perf.py  utils.py  viz.py
health4earth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
roadmap/: gantt.md
scripts/: build_all_series.py  build_co2_json.py  build_life_json.py  build_pollution_json.py  predict_france.py  prepare_for_map.py
scripts/cleaning/: data_cleaning.py
site_libs/bootstrap/: bootstrap-725465af2631f9691bf1e5d4ad82c4f4.min.css  bootstrap-c497c404db433ee4f52765803e7b485e.min.css
slides/: custom_slides.css  presentation.html  presentation.qmd
tests/: test_analytics.py  test_clean.py  test_ingest.py
website/: .gitignore  _quarto.yml  analysis.qmd  capitales.qmd  code.qmd  dashboard.qmd  data.qmd  docs.qmd  documentation.qmd  eda.qmd  index.qmd  map.qmd  methods.qmd  model.qmd  predictions.qmd  predictions_france.qmd  styles.css  team.qmd  visualisations.qmd
website/_site/: data.html
website/api/: genindex.html  health4earth.html  (+8 more)
(+41 files in other folders)
