[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "health4earth"
version = "0.1.0"
description = "Visualisation interactive CO2, pollution et santé publique"
authors = [{name = "Equipe HEALTH4EARTH"}]
dependencies = [
    "pandas",
    "plotly",
    "altair",
    "pooch",
    "pytest"
]

[tool.setuptools]
packages = ["health4earth"]