[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "health4earth"
version = "0.0.1"
description = "Analyse CO2 et Santé"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "pooch",
    "requests",
    "scipy",
    "geopandas",  # Si vous l'utilisez
    "openpyxl"    # Souvent requis pour lire des Excel
]

[tool.setuptools.packages.find]
where = ["src"]  # <--- IMPORTANT : Vérifiez si votre code est dans src/ ou directement à la racine
# Si votre dossier 'health4earth' est à la racine (comme vu dans votre ls), supprimez les 2 lignes [tool.setuptools...] ci-dessus
# et laissez setuptools trouver le dossier tout seul.