[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health4earth"
version = "0.1.0"
description = "Analyse des liens entre CO2, pollution et santé"
readme = "README.md"
authors = [{ name = "Votre Nom", email = "votre.email@etu.umontpellier.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "pooch",
    "scipy",
    "geopandas",
    "openpyxl",
    "requests"
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "sphinx",
    "sphinx-rtd-theme"
]

[tool.setuptools.packages.find]
# Important : comme votre dossier 'health4earth' est à la racine, on laisse vide ou on met "."
where = ["."]
include = ["health4earth*"]